@@ -49,11 +49,12 @@
 
 <screen><userinput remap="make">make</userinput></screen>
 
+    <note><para>The tests take a very long time: over 30 SBUs.  Running
+    the tests is not recommended.</para></note>
+
     <para>To test the results, issue:</para>
 
 <screen><userinput remap="test">make check</userinput></screen>
-
-    <para>This takes a long time, about 10 SBUs.</para>
 
     <para>Install the package:</para>
 
